Moved czar::CzarConfig into its own module cconfig

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ add_custom_target(clang-format-check
 #-----------------------------------------------------------------------------
 
 add_subdirectory(admin)
+add_subdirectory(cconfig)
 add_subdirectory(ccontrol)
 add_subdirectory(css)
 add_subdirectory(czar)
