--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -2,7 +2,6 @@ add_library(czar OBJECT)
 
 target_sources(czar PRIVATE
     Czar.cc
-    CzarConfig.cc
     MessageTable.cc
 )
 
@@ -11,6 +10,7 @@ target_include_directories(czar PRIVATE
 )
 
 target_link_libraries(czar PUBLIC
+    cconfig
     log
     XrdSsiLib
 )
