--- a/src/qana/CMakeLists.txt
+++ b/src/qana/CMakeLists.txt
@@ -25,6 +25,7 @@ FUNCTION(qana_tests)
     FOREACH(TEST IN ITEMS ${ARGV})
         add_executable(${TEST} ${TEST}.cc)
         target_link_libraries(${TEST} PUBLIC
+            cconfig
             ccontrol
             czar
             parser
