--- a/src/query/CMakeLists.txt
+++ b/src/query/CMakeLists.txt
@@ -49,6 +49,7 @@ FUNCTION(query_tests)
     FOREACH(TEST IN ITEMS ${ARGV})
         add_executable(${TEST} ${TEST}.cc)
         target_link_libraries(${TEST} PUBLIC
+            cconfig
             ccontrol
             czar
             parser
