Move XRootD back to LSST clone to work around deleted upstream branch

--- a/admin/tools/docker/base/Dockerfile
+++ b/admin/tools/docker/base/Dockerfile
@@ -121,7 +121,7 @@ RUN cd /tmp \
     && rm -rf mysqlproxy
 
 RUN cd /tmp \
-    && git clone https://github.com/xrootd/xrootd.git \
+    && git clone https://github.com/lsst/xrootd.git \
     && cd xrootd \
     && git checkout ssi-5.3.x \
     && mkdir build \
