Moved the function for finding host's FQDN(s) into util/
Extended the contract and the implementation of the function to
allow a choice to return a single result or all findings.
Migrated the only client of that function that existed before
the move.

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(util PRIVATE
     Bug.cc
     CmdLineParser.cc
     Command.cc
+    common.cc
     ConfigStore.cc
     DynamicWorkQueue.cc
     Error.cc
@@ -31,6 +32,7 @@ target_sources(util PRIVATE
 )
 
 target_link_libraries(util PUBLIC
+    boost_system
     log
 )
 
