Fixed a bug in the implementation of the class util::ConfigStore
Extended the class. Also, added a unit test for the class.

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -52,6 +52,7 @@ ENDFUNCTION()
 
 util_tests(
     testCommon
+    testConfigStore
     testEventThread
     testIterableFormatter
     testHistogram
