Extended the Replication framework to pull worker config info

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -144,6 +144,8 @@ target_sources(replica PRIVATE
     GetReplicasQservMgtRequest.h
     GetDbStatusQservMgtRequest.cc
     GetDbStatusQservMgtRequest.h
+    GetConfigQservMgtRequest.cc
+    GetConfigQservMgtRequest.h
     GetStatusQservMgtRequest.cc
     GetStatusQservMgtRequest.h
     HealthMonitorTask.cc
