Implemented and planted the qhttp-based server into Qserv worker
The server is meant to process management and monitoring requests
sent by the Replication Controller and relevant applications.

--- a/src/xrdsvc/CMakeLists.txt
+++ b/src/xrdsvc/CMakeLists.txt
@@ -3,6 +3,7 @@ add_dependencies(qserv_xrdsvc proto)
 
 target_sources(qserv_xrdsvc PRIVATE
     ChannelStream.cc
+    HttpSvc.cc
     SsiProvider.cc
     SsiRequest.cc
     SsiService.cc
