Migrated HTTP client classes and tests into the dedicated module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,7 @@ add_subdirectory(ccontrol)
 add_subdirectory(css)
 add_subdirectory(czar)
 add_subdirectory(global)
+add_subdirectory(http)
 add_subdirectory(memman)
 add_subdirectory(mimic)
 add_subdirectory(mysql)
