Moved utility function replica::stoui ito the module global::
The function is missing in the C++ Standard Library.

--- a/src/global/CMakeLists.txt
+++ b/src/global/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(global PRIVATE
     debugUtil.cc
     ResourceUnit.cc
     sqltoken.cc
+    stringUtil.cc
 )
 
 target_link_libraries(global PUBLIC
