Added http modules for monitoring and managing Qserv workers

--- a/src/xrdsvc/CMakeLists.txt
+++ b/src/xrdsvc/CMakeLists.txt
@@ -3,6 +3,9 @@ add_dependencies(qserv_xrdsvc proto)
 
 target_sources(qserv_xrdsvc PRIVATE
     ChannelStream.cc
+    HttpModule.cc
+    HttpMonitorModule.cc
+    HttpReplicaMgtModule.cc
     HttpSvc.cc
     SsiProvider.cc
     SsiRequest.cc
