Refactored and streamlined worker XROOTD/SSI front-end classes
Refactored worker XROOTD/SSI resource monitoring by moving class
from to module wpublish to wcontrol. An object of the class is now
owned by class Foreman which is AKA "service provider" for
the Qserv worker.

Shifted the chunk inventory collection from SsiService into Foreman
for better and more convenient dependency management. The second
reason of the change was to prepare ground for implementing
HTTP-based worker management services.

--- a/src/wcontrol/CMakeLists.txt
+++ b/src/wcontrol/CMakeLists.txt
@@ -3,6 +3,7 @@ add_dependencies(wcontrol proto)
 
 target_sources(wcontrol PRIVATE
     Foreman.cc
+    ResourceMonitor.cc
     SqlConnMgr.cc
     TransmitMgr.cc
     WorkerStats.cc
