Switched the control plane protocol to HTTP
The new design of the Qserv managememt control plain now relies upon
the HTTP protocol to communicate with workers.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -311,6 +311,7 @@ replica_tests(
     testSemanticMap
     testSqlResultSet
     testSqlSchemaUtils
+    testTaskSelector
     testTypes
     testConfiguration
 )
