Refactored and extended async client API for the HTTP protocol
The extended API has an option for dynamic updates of the connection parameters
for the remote Web server. This allows tracking changes in a location
of the server as needed by an application context.

Refactored and extended the unit test for AsyncReq.

--- a/src/http/CMakeLists.txt
+++ b/src/http/CMakeLists.txt
@@ -25,9 +25,10 @@ target_link_libraries(http PUBLIC
 install(TARGETS http)
 
 function(HTTP_TESTS)
-    foreach(TEST IN ITEMS ${argv})
+    foreach(TEST IN ITEMS ${ARGV})
         add_executable(${TEST} ${TEST}.cc)
         target_link_libraries(${TEST} PUBLIC
+            global
             http
             Boost::unit_test_framework
             Threads::Threads
