--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -76,6 +76,7 @@ target_sources(replica PRIVATE
     GetReplicasQservMgtRequest.cc
     GetDbStatusQservMgtRequest.cc
     GetConfigQservMgtRequest.cc
+    GetResultFilesQservMgtRequest.cc
     GetStatusQservMgtRequest.cc
     HealthMonitorTask.cc
     HttpAsyncReqApp.cc
