Extended the registration service to support Czar(s)
Minor refactoring in the relevant classes to support Czars and
to reduce code duplication. Wired Czar with the Registry service
to send periodic updates on a status and configuration parameters
of Czar to the Registry.

--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -11,6 +11,8 @@ target_include_directories(czar PRIVATE
 
 target_link_libraries(czar PUBLIC
     cconfig
+    http
+    util
     log
     XrdSsiLib
 )
