Refactoring in the Configuration service of the Replication system
The  main goal was to disambiguate worker configuration descriptors
(class replica::ConfigWorker) from variables representing the names
of the workers in the code. Worker descriptor variables are typically
named as 'worker'. And for worker names the new code uses 'workerName'.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -28,6 +28,7 @@ target_sources(replica PRIVATE
     ConfigAppBase.cc
     ConfigDatabase.cc
     ConfigDatabaseFamily.cc
+    ConfigHost.cc
     ConfigParserJSON.cc
     ConfigParserMySQL.cc
     ConfigTable.cc
