Add the REST server to Czar for serving management requests
Incremented the REST API version to 29.

--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -2,6 +2,9 @@ add_library(czar OBJECT)
 
 target_sources(czar PRIVATE
     Czar.cc
+    HttpModule.cc
+    HttpMonitorModule.cc
+    HttpSvc.cc
     MessageTable.cc
 )
 
@@ -12,6 +15,8 @@ target_include_directories(czar PRIVATE
 target_link_libraries(czar PUBLIC
     cconfig
     http
+    qdisp
+    qhttp
     util
     log
     XrdSsiLib
