Refactored Qserv management classes to allow Czar requests
The original base class QservMgtRequest got despecialized
from being exclusively Qserv workers-oriented base into
the neutral request type. Two specialized subclasses were
added to support the corresponding hierachies: QservCzarMgtRequest
and QservWorkerMgtRequest.

The change prepares ground for introducing Czar management requests
in the Replication Framework.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -132,12 +132,14 @@ target_sources(replica PRIVATE
     PurgeApp.cc
     PurgeJob.cc
     QhttpTestApp.cc
+    QservCzarMgtRequest.cc
     QservGetReplicasJob.cc
     QservMgtRequest.cc
     QservMgtServices.cc
     QservStatusJob.cc
     QservSyncJob.cc
     QservWorkerApp.cc
+    QservWorkerMgtRequest.cc
     QservWorkerPingApp.cc
     RebalanceApp.cc
     RebalanceJob.cc
