--- a/src/replica/export/CMakeLists.txt
+++ b/src/replica/export/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(replica_export OBJECT)
+add_dependencies(replica_export replica_proto)
 target_sources(replica_export PRIVATE
     ExportClient.cc
     ExportServer.cc
