--- a/src/replica/ingest/CMakeLists.txt
+++ b/src/replica/ingest/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(replica_ingest OBJECT)
+add_dependencies(replica_ingest replica_proto)
 target_sources(replica_ingest PRIVATE
     IngestClient.cc
     IngestFileSvc.cc
