--- a/src/replica/mysql/CMakeLists.txt
+++ b/src/replica/mysql/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(replica_mysql OBJECT)
+add_dependencies(replica_mysql replica_proto)
 target_sources(replica_mysql PRIVATE
     DatabaseMySQL.cc
     DatabaseMySQLGenerator.cc
