--- a/src/replica/util/CMakeLists.txt
+++ b/src/replica/util/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(replica_util OBJECT)
+add_dependencies(replica_util replica_proto)
 target_sources(replica_util PRIVATE
     ChunkNumber.cc
     ChunkedTable.cc
