Moved a config class of the sync http client into a separate header

--- a/src/http/CMakeLists.txt
+++ b/src/http/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(http SHARED)
 target_sources(http PRIVATE
     AsyncReq.cc
     Client.cc
+    ClientConfig.cc
     Exceptions.cc
     MetaModule.cc
     Method.cc
