Extended query completion/cancellation protocol to send Czar id
This extension prevents interference at workers when they are
processing query management requests sent by different Czars
in the multi-Czar deployments. The naming convention for
the worker-side partial result files has been extended as well
to include the numeric identifier of a Czar responsible
for the corresponding query.
Added the unit test for the file name parser

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(util PRIVATE
     Issue.cc
     MultiError.cc
     Mutex.cc
+    ResultFileNameParser.cc
     SemaMgr.cc
     StringHash.cc
     String.cc
@@ -33,6 +34,7 @@ target_sources(util PRIVATE
 )
 
 target_link_libraries(util PUBLIC
+    boost_filesystem
     boost_system
     log
 )
@@ -54,6 +56,7 @@ util_tests(
     testCommon
     testConfigStore
     testEventThread
+    testFileNameParser
     testIterableFormatter
     testHistogram
     testMultiError
