Extended Qserv Cli and dedicated entry point for testing HTTP frontend
NOTE: This work is yet to be complete. The current implementation adds
the fair amount of code duplication, which may or may not be a problem,
depending on the long-term plans for eliminating the MySQL frontend.
A substantial refactoring effort may be needed if the MySQL proxy-based
frontend stayed for a long period of time. Should such reafactoring
decision be made it would rather be done in a context of a separate ticket.

--- a/src/admin/etc/integration_tests.yaml
+++ b/src/admin/etc/integration_tests.yaml
@@ -3,6 +3,7 @@ reference-db-uri: mysql://qsmaster@integration-test-reference:3306
 reference-db-admin-uri: mysql://root:CHANGEME@integration-test-reference:3306
 replication-controller-uri: repl://@repl_controller:25081
 qserv-uri: qserv://qsmaster@czar_proxy:4040
+qserv-http-uri: http://czar_http:4048
 czar-db-admin-uri: mysql://root:CHANGEME@czar_mariadb:3306
 # The folder where the itest sources will be mounted in the container:
 qserv-testdata-dir: /tmp/qserv/itest_src
