Added code to read chunk disposition map and organize for czar use.

--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(czar OBJECT)
 
 target_sources(czar PRIVATE
     Czar.cc
+    CzarChunkMap.cc
     HttpCzarSvc.cc
     HttpCzarQueryModule.cc
     HttpModule.cc
