Added code to read chunk disposition map and organize for czar use.

--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -4,6 +4,8 @@ target_sources(czar PRIVATE
     ChttpModule.cc
     Czar.cc
     HttpCzarIngestModule.cc
+    CzarChunkMap.cc
+    HttpCzarSvc.cc
     HttpCzarQueryModule.cc
     HttpCzarSvc.cc
     HttpMonitorModule.cc
